mini_bison/mini.output
Terminals unused in grammar

    AND_ASIG
    DIV_ASIG
    FD_ASIG
    FI_ASIG
    GE
    INDIRECCION
    LE
    MOD_ASIG
    MULT_ASIG
    NEQ
    OR_ASIG
    POT_ASIG
    POTENCIA
    RESTA_ASIG
    SUMA_ASIG
    TAMANO
    XOR_ASIG
    '/'
    '%'
    "<-"
    "->"
    "&&"
    "||"
    '<'
    '>'
    "=<"
    "=>"


State 145 conflicts: 1 shift/reduce
State 157 conflicts: 1 shift/reduce
State 158 conflicts: 4 shift/reduce
State 303 conflicts: 4 shift/reduce
State 304 conflicts: 4 shift/reduce
State 305 conflicts: 4 shift/reduce
State 306 conflicts: 4 shift/reduce
State 354 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: inicio_programa bloque_programa

    2 varias_rutas: varias_rutas ',' RUTA
    3             | RUTA

    4 varias_cabeceras: varias_cabeceras CABECERA varias_rutas ';'
    5                 | %empty

    6 inicio_programa: PROGRAMA IDENTIFICADOR ';' varias_cabeceras

    7 declaracion_varias_funciones: declaracion_varias_funciones declaracion_funcion
    8                             | %empty

    9 bloque_programa: declaraciones_tipos declaraciones_constantes declaraciones_variables declaracion_varias_funciones bloque_instrucciones

   10 declaracion_tipo: IDENTIFICADOR ES especificacion_tipo ';'
   11                 | error '\n'

   12 varias_declaracion_tipo: varias_declaracion_tipo declaracion_tipo
   13                        | declaracion_tipo

   14 declaraciones_tipos: TIPOS varias_declaracion_tipo FIN
   15                    | %empty

   16 varias_referencias: varias_referencias REF
   17                   | %empty

   18 especificacion_tipo: varias_referencias tipo_basico

   19 tipo_basico: IDENTIFICADOR
   20            | tipo_escalar
   21            | tipo_enumerado
   22            | tipo_estructurado

   23 tipo_escalar: ENTERO
   24             | REAL
   25             | CARACTER
   26             | CADENA
   27             | FICHERO
   28             | EXCEPCION
   29             | error '\n'

   30 tipo_enumerado: ARRAY DE especificacion_tipo
   31               | HASH DE especificacion_tipo
   32               | CONJUNTO DE especificacion_tipo

   33 linea_campo: IDENTIFICADOR ES especificacion_tipo ';'
   34            | error '\n'

   35 varias_linea_campo: varias_linea_campo linea_campo
   36                   | linea_campo

   37 tipo_estructurado: ESTRUCTURA PRINCIPIO varias_linea_campo FIN
   38                  | UNION PRINCIPIO varias_linea_campo FIN

   39 declaracion_constante: IDENTIFICADOR ES tipo_basico '=' constante ';'
   40                      | error '\n'

   41 varias_declaracion_constante: varias_declaracion_constante declaracion_constante
   42                             | declaracion_constante

   43 declaraciones_constantes: CONSTANTES varias_declaracion_constante FIN
   44                         | %empty

   45 constante: CTC_ENTERA
   46          | CTC_REAL
   47          | CTC_CARACTER
   48          | CTC_CADENA
   49          | constante_enumerada
   50          | constante_estructurada

   51 varias_constante: avarias_costante

   52 avarias_costante: avarias_costante ',' constante
   53                 | constante

   54 varios_elemento_hash: avarios_hashs

   55 avarios_hashs: avarios_hashs ',' elemento_hash
   56              | elemento_hash

   57 constante_enumerada: '(' varias_constante ')'
   58                    | '(' varios_elemento_hash ')'
   59                    | '(' ')'

   60 elemento_hash: CTC_CADENA FLECHA_DCHA constante

   61 campo_constante: IDENTIFICADOR '=' constante
   62                | IDENTIFICADOR EQ constante

   63 varios_campo_constante: varios_campo_constante ',' campo_constante
   64                       | campo_constante

   65 constante_estructurada: '{' varios_campo_constante '}'

   66 varios_identificadores_por_coma_mas: varios_identificadores_por_coma_mas ',' IDENTIFICADOR
   67                                    | IDENTIFICADOR

   68 varias_expresiones_por_coma_mas: varias_expresiones_por_coma_mas ',' expresion
   69                                | expresion

   70 declaracion_variables: varios_identificadores_por_coma_mas ':' especificacion_tipo ';'
   71                      | varios_identificadores_por_coma_mas ':' especificacion_tipo '=' varias_expresiones_por_coma_mas ';'
   72                      | error '\n'

   73 varias_declaracion_variables: varias_declaracion_variables declaracion_variables
   74                             | declaracion_variables

   75 declaraciones_variables: VARIABLES varias_declaracion_variables FIN
   76                        | %empty

   77 declaracion_funcion: FUNCION IDENTIFICADOR FLECHA_DCHA tipo_salida cuerpo_funcion
   78                    | FUNCION IDENTIFICADOR lista_parametros FLECHA_DCHA tipo_salida cuerpo_funcion

   79 varios_parametros: varios_parametros parametros ';'
   80                  | %empty

   81 lista_parametros: '(' varios_parametros parametros ')'

   82 varias_expresion_constante_por_coma_mas: varias_expresion_constante_por_coma_mas ',' expresion_constante
   83                                        | expresion_constante

   84 parametros: varios_identificadores_por_coma_mas ':' especificacion_tipo
   85           | varios_identificadores_por_coma_mas ':' especificacion_tipo '=' varias_expresion_constante_por_coma_mas

   86 tipo_salida: especificacion_tipo
   87            | NADA

   88 varias_declaracion_funcion: varias_declaracion_funcion declaracion_funcion
   89                           | %empty

   90 cuerpo_funcion: declaraciones_constantes declaraciones_variables varias_declaracion_funcion bloque_instrucciones

   91 varias_instrucciones: varias_instrucciones instruccion
   92                     | instruccion

   93 bloque_instrucciones: PRINCIPIO varias_instrucciones FIN

   94 instruccion_expresion: expresion_funcional ';'
   95                      | asignacion ';'
   96                      | error '\n'

   97 instruccion: instruccion_expresion
   98            | instruccion_bifurcacion
   99            | instruccion_bucle
  100            | instruccion_salto
  101            | instruccion_destino_salto
  102            | instruccion_devolver
  103            | instruccion_vacia
  104            | instruccion_lanzamiento_excepcion
  105            | instruccion_captura_excepcion

  106 asignacion: expresion_indexada operador_asignacion expresion

  107 operador_asignacion: '='
  108                    | "=+"
  109                    | "=-"
  110                    | "=*"
  111                    | "=/"
  112                    | "=%"
  113                    | "=**"
  114                    | "=<-"
  115                    | "=->"
  116                    | "=&"
  117                    | "=@"
  118                    | "=|"
  119                    | error '\n'

  120 otros_casos: SI ENCAMBIO '(' expresion ')' accion

  121 v_otros_casos: v_otros_casos otros_casos
  122              | %empty

  123 instruccion_bifurcacion: SI expresion accion v_otros_casos FIN
  124                        | SI expresion accion v_otros_casos SINO accion FIN

  125 accion: instruccion
  126       | bloque_instrucciones

  127 v_asignacion: v_asignacion ',' asignacion
  128             | asignacion

  129 instruccion_bucle: MIENTRAS '(' expresion ')' accion
  130                  | MIENTRAS '(' ')' accion
  131                  | HACER accion MIENTRAS '(' expresion ')' ';'
  132                  | PARA '(' v_asignacion ';' expresion ';' v_asignacion ')' accion
  133                  | PARA CADA IDENTIFICADOR '(' expresion ')' accion

  134 instruccion_salto: SALTAR IDENTIFICADOR ';'
  135                  | CONTINUAR ';'
  136                  | ESCAPE ';'

  137 instruccion_destino_salto: ETIQUETA IDENTIFICADOR ';'

  138 instruccion_devolver: DEVOLVER ';'
  139                     | DEVOLVER expresion ';'

  140 instruccion_vacia: ';'

  141 instruccion_lanzamiento_excepcion: LANZA EXCEPCION IDENTIFICADOR ';'

  142 instruccion_captura_excepcion: EJECUTA bloque_instrucciones clausulas

  143 clausulas: clausulas_excepcion
  144          | clausulas_excepcion clausula_defecto
  145          | clausula_defecto

  146 v_clausula_excepcion_especifica: v_clausula_excepcion_especifica clausula_excepcion_especifica
  147                                | %empty

  148 clausulas_excepcion: v_clausula_excepcion_especifica clausula_excepcion_general

  149 clausula_excepcion_especifica: EXCEPCION IDENTIFICADOR bloque_instrucciones

  150 clausula_excepcion_general: OTRA EXCEPCION bloque_instrucciones

  151 clausula_defecto: DEFECTO bloque_instrucciones

  152 expresion_constante: CTC_ENTERA
  153                    | CTC_REAL
  154                    | CTC_CADENA
  155                    | CTC_CARACTER

  156 expresion_indexada: expresion_basica
  157                   | expresion_indexada '.' expresion_basica
  158                   | expresion_indexada "^." expresion_basica
  159                   | expresion_indexada indice
  160                   | expresion_indexada "^." indice

  161 expresion_basica: IDENTIFICADOR
  162                 | '(' expresion ')'
  163                 | '^' expresion_basica
  164                 | '\\' expresion_basica

  165 indice: '[' expresion ']'
  166       | '{' expresion '}'

  167 varias_expresion_por_coma_asterisco: varias_expresion

  168 varias_expresion: varias_expresion ',' expresion
  169                 | expresion

  170 expresion_funcional: IDENTIFICADOR '(' varias_expresion_por_coma_asterisco ')'
  171                    | IDENTIFICADOR '(' ')'

  172 expresion: expresion_logica
  173          | expresion_logica SI expresion SINO expresion

  174 expresion_logica: expresion OR expresion_or
  175                 | expresion_or

  176 expresion_or: expresion_or AND expresion_and
  177             | expresion_and

  178 expresion_and: expresion_and EQ expresion_igual
  179              | expresion_igual

  180 expresion_igual: '=' expresion_comparacion
  181                | expresion_comparacion

  182 expresion_comparacion: expresion_comparacion "==" expresion_orbin
  183                      | expresion_comparacion "!=" expresion_orbin
  184                      | expresion_orbin

  185 expresion_orbin: expresion_orbin '|' expresion_xorbin
  186                | expresion_xorbin

  187 expresion_xorbin: expresion_xorbin '@' expresion_andbin
  188                 | expresion_andbin

  189 expresion_andbin: expresion_andbin '&' expresion_desplazamiento
  190                 | expresion_desplazamiento

  191 expresion_desplazamiento: expresion_desplazamiento FLECHA_DCHA expresion_sumares
  192                         | expresion_desplazamiento FLECHA_IZDA expresion_sumares
  193                         | expresion_sumares

  194 expresion_sumares: expresion_sumares '+' expresion_mult
  195                  | expresion_sumares '-' expresion_mult
  196                  | expresion_mult

  197 expresion_mult: expresion_mult '*' expresion_potencia
  198               | expresion_potencia

  199 expresion_potencia: expresion_potencia "**" expresion_prefija
  200                   | expresion_prefija

  201 expresion_prefija: expresion_prefija '~' operandos
  202                  | expresion_prefija '-' operandos
  203                  | expresion_prefija '!' operandos
  204                  | expresion_prefija "tamano" operandos
  205                  | operandos

  206 operandos: operandos expresion_indexada
  207          | expresion_indexada


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 11 29 34 40 72 96 119
    '!' (33) 203
    '%' (37)
    '&' (38) 189
    '(' (40) 57 58 59 81 120 129 130 131 132 133 162 170 171
    ')' (41) 57 58 59 81 120 129 130 131 132 133 162 170 171
    '*' (42) 197
    '+' (43) 194
    ',' (44) 2 52 55 63 66 68 82 127 168
    '-' (45) 195 202
    '.' (46) 157
    '/' (47)
    ':' (58) 70 71 84 85
    ';' (59) 4 6 10 33 39 70 71 79 94 95 131 132 134 135 136 137 138 139 140 141
    '<' (60)
    '=' (61) 39 61 71 85 107 180
    '>' (62)
    '@' (64) 187
    '[' (91) 165
    '\\' (92) 164
    ']' (93) 165
    '^' (94) 163
    '{' (123) 65 166
    '|' (124) 185
    '}' (125) 65 166
    '~' (126) 201
    error (256) 11 29 34 40 72 96 119
    AND (258) 176
    AND_ASIG (259)
    ARRAY (260) 30
    CABECERA (261) 4
    CADA (262) 133
    CADENA (263) 26
    CARACTER (264) 25
    CONJUNTO (265) 32
    CONSTANTES (266) 43
    CONTINUAR (267) 135
    CTC_CADENA (268) 48 60 154
    CTC_CARACTER (269) 47 155
    CTC_ENTERA (270) 45 152
    CTC_REAL (271) 46 153
    DE (272) 30 31 32
    DEFECTO (273) 151
    DIV_ASIG (274)
    DEVOLVER (275) 138 139
    EJECUTA (276) 142
    ENCAMBIO (277) 120
    ENTERO (278) 23
    EQ (279) 62 178
    ES (280) 10 33 39
    ESCAPE (281) 136
    ESTRUCTURA (282) 37
    ETIQUETA (283) 137
    EXCEPCION (284) 28 141 149 150
    FD_ASIG (285)
    FI_ASIG (286)
    FLECHA_DCHA (287) 60 77 78 191
    FLECHA_IZDA (288) 192
    FICHERO (289) 27
    FIN (290) 14 37 38 43 75 93 123 124
    FUNCION (291) 77 78
    HACER (292) 131
    HASH (293) 31
    GE (294)
    IDENTIFICADOR (295) 6 10 19 33 39 61 62 66 67 77 78 133 134 137 141 149 161 170 171
    INDIRECCION (296)
    LANZA (297) 141
    LE (298)
    MIENTRAS (299) 129 130 131
    MOD_ASIG (300)
    MULT_ASIG (301)
    NADA (302) 87
    NEQ (303)
    OR (304) 174
    OTRA (305) 150
    OR_ASIG (306)
    PARA (307) 132 133
    POT_ASIG (308)
    PRINCIPIO (309) 37 38 93
    PROGRAMA (310) 6
    POTENCIA (311)
    REAL (312) 24
    REF (313) 16
    RESTA_ASIG (314)
    RUTA (315) 2 3
    SALTAR (316) 134
    SI (317) 120 123 124 173
    SINO (318) 124 173
    SUMA_ASIG (319)
    TAMANO (320)
    TIPOS (321) 14
    UNION (322) 38
    VARIABLES (323) 75
    XOR_ASIG (324)
    "<-" (325)
    "->" (326)
    "&&" (327)
    "||" (328)
    "tamano" (329) 204
    "=<" (330)
    "=>" (331)
    "==" (332) 182
    "!=" (333) 183
    "**" (334) 199
    "=+" (335) 108
    "=-" (336) 109
    "=*" (337) 110
    "=/" (338) 111
    "=%" (339) 112
    "=**" (340) 113
    "=<-" (341) 114
    "=->" (342) 115
    "=&" (343) 116
    "=@" (344) 117
    "=|" (345) 118
    "^." (346) 158 160


Nonterminals, with rules where they appear

    $accept (118)
        on left: 0
    programa (119)
        on left: 1
        on right: 0
    varias_rutas (120)
        on left: 2 3
        on right: 2 4
    varias_cabeceras (121)
        on left: 4 5
        on right: 4 6
    inicio_programa (122)
        on left: 6
        on right: 1
    declaracion_varias_funciones (123)
        on left: 7 8
        on right: 7 9
    bloque_programa (124)
        on left: 9
        on right: 1
    declaracion_tipo (125)
        on left: 10 11
        on right: 12 13
    varias_declaracion_tipo (126)
        on left: 12 13
        on right: 12 14
    declaraciones_tipos (127)
        on left: 14 15
        on right: 9
    varias_referencias (128)
        on left: 16 17
        on right: 16 18
    especificacion_tipo (129)
        on left: 18
        on right: 10 30 31 32 33 70 71 84 85 86
    tipo_basico (130)
        on left: 19 20 21 22
        on right: 18 39
    tipo_escalar (131)
        on left: 23 24 25 26 27 28 29
        on right: 20
    tipo_enumerado (132)
        on left: 30 31 32
        on right: 21
    linea_campo (133)
        on left: 33 34
        on right: 35 36
    varias_linea_campo (134)
        on left: 35 36
        on right: 35 37 38
    tipo_estructurado (135)
        on left: 37 38
        on right: 22
    declaracion_constante (136)
        on left: 39 40
        on right: 41 42
    varias_declaracion_constante (137)
        on left: 41 42
        on right: 41 43
    declaraciones_constantes (138)
        on left: 43 44
        on right: 9 90
    constante (139)
        on left: 45 46 47 48 49 50
        on right: 39 52 53 60 61 62
    varias_constante (140)
        on left: 51
        on right: 57
    avarias_costante (141)
        on left: 52 53
        on right: 51 52
    varios_elemento_hash (142)
        on left: 54
        on right: 58
    avarios_hashs (143)
        on left: 55 56
        on right: 54 55
    constante_enumerada (144)
        on left: 57 58 59
        on right: 49
    elemento_hash (145)
        on left: 60
        on right: 55 56
    campo_constante (146)
        on left: 61 62
        on right: 63 64
    varios_campo_constante (147)
        on left: 63 64
        on right: 63 65
    constante_estructurada (148)
        on left: 65
        on right: 50
    varios_identificadores_por_coma_mas (149)
        on left: 66 67
        on right: 66 70 71 84 85
    varias_expresiones_por_coma_mas (150)
        on left: 68 69
        on right: 68 71
    declaracion_variables (151)
        on left: 70 71 72
        on right: 73 74
    varias_declaracion_variables (152)
        on left: 73 74
        on right: 73 75
    declaraciones_variables (153)
        on left: 75 76
        on right: 9 90
    declaracion_funcion (154)
        on left: 77 78
        on right: 7 88
    varios_parametros (155)
        on left: 79 80
        on right: 79 81
    lista_parametros (156)
        on left: 81
        on right: 78
    varias_expresion_constante_por_coma_mas (157)
        on left: 82 83
        on right: 82 85
    parametros (158)
        on left: 84 85
        on right: 79 81
    tipo_salida (159)
        on left: 86 87
        on right: 77 78
    varias_declaracion_funcion (160)
        on left: 88 89
        on right: 88 90
    cuerpo_funcion (161)
        on left: 90
        on right: 77 78
    varias_instrucciones (162)
        on left: 91 92
        on right: 91 93
    bloque_instrucciones (163)
        on left: 93
        on right: 9 90 126 142 149 150 151
    instruccion_expresion (164)
        on left: 94 95 96
        on right: 97
    instruccion (165)
        on left: 97 98 99 100 101 102 103 104 105
        on right: 91 92 125
    asignacion (166)
        on left: 106
        on right: 95 127 128
    operador_asignacion (167)
        on left: 107 108 109 110 111 112 113 114 115 116 117 118 119
        on right: 106
    otros_casos (168)
        on left: 120
        on right: 121
    v_otros_casos (169)
        on left: 121 122
        on right: 121 123 124
    instruccion_bifurcacion (170)
        on left: 123 124
        on right: 98
    accion (171)
        on left: 125 126
        on right: 120 123 124 129 130 131 132 133
    v_asignacion (172)
        on left: 127 128
        on right: 127 132
    instruccion_bucle (173)
        on left: 129 130 131 132 133
        on right: 99
    instruccion_salto (174)
        on left: 134 135 136
        on right: 100
    instruccion_destino_salto (175)
        on left: 137
        on right: 101
    instruccion_devolver (176)
        on left: 138 139
        on right: 102
    instruccion_vacia (177)
        on left: 140
        on right: 103
    instruccion_lanzamiento_excepcion (178)
        on left: 141
        on right: 104
    instruccion_captura_excepcion (179)
        on left: 142
        on right: 105
    clausulas (180)
        on left: 143 144 145
        on right: 142
    v_clausula_excepcion_especifica (181)
        on left: 146 147
        on right: 146 148
    clausulas_excepcion (182)
        on left: 148
        on right: 143 144
    clausula_excepcion_especifica (183)
        on left: 149
        on right: 146
    clausula_excepcion_general (184)
        on left: 150
        on right: 148
    clausula_defecto (185)
        on left: 151
        on right: 144 145
    expresion_constante (186)
        on left: 152 153 154 155
        on right: 82 83
    expresion_indexada (187)
        on left: 156 157 158 159 160
        on right: 106 157 158 159 160 206 207
    expresion_basica (188)
        on left: 161 162 163 164
        on right: 156 157 158 163 164
    indice (189)
        on left: 165 166
        on right: 159 160
    varias_expresion_por_coma_asterisco (190)
        on left: 167
        on right: 170
    varias_expresion (191)
        on left: 168 169
        on right: 167 168
    expresion_funcional (192)
        on left: 170 171
        on right: 94
    expresion (193)
        on left: 172 173
        on right: 68 69 106 120 123 124 129 131 132 133 139 162 165 166 168 169 173 174
    expresion_logica (194)
        on left: 174 175
        on right: 172 173
    expresion_or (195)
        on left: 176 177
        on right: 174 175 176
    expresion_and (196)
        on left: 178 179
        on right: 176 177 178
    expresion_igual (197)
        on left: 180 181
        on right: 178 179
    expresion_comparacion (198)
        on left: 182 183 184
        on right: 180 181 182 183
    expresion_orbin (199)
        on left: 185 186
        on right: 182 183 184 185
    expresion_xorbin (200)
        on left: 187 188
        on right: 185 186 187
    expresion_andbin (201)
        on left: 189 190
        on right: 187 188 189
    expresion_desplazamiento (202)
        on left: 191 192 193
        on right: 189 190 191 192
    expresion_sumares (203)
        on left: 194 195 196
        on right: 191 192 193 194 195
    expresion_mult (204)
        on left: 197 198
        on right: 194 195 196 197
    expresion_potencia (205)
        on left: 199 200
        on right: 197 198 199
    expresion_prefija (206)
        on left: 201 202 203 204 205
        on right: 199 200 201 202 203 204
    operandos (207)
        on left: 206 207
        on right: 201 202 203 204 205 206


State 0

    0 $accept: . programa $end

    PROGRAMA  shift, and go to state 1

    programa         go to state 2
    inicio_programa  go to state 3


State 1

    6 inicio_programa: PROGRAMA . IDENTIFICADOR ';' varias_cabeceras

    IDENTIFICADOR  shift, and go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    1 programa: inicio_programa . bloque_programa

    TIPOS  shift, and go to state 6

    $default  reduce using rule 15 (declaraciones_tipos)

    bloque_programa      go to state 7
    declaraciones_tipos  go to state 8


State 4

    6 inicio_programa: PROGRAMA IDENTIFICADOR . ';' varias_cabeceras

    ';'  shift, and go to state 9


State 5

    0 $accept: programa $end .

    $default  accept


State 6

   14 declaraciones_tipos: TIPOS . varias_declaracion_tipo FIN

    error          shift, and go to state 10
    IDENTIFICADOR  shift, and go to state 11

    declaracion_tipo         go to state 12
    varias_declaracion_tipo  go to state 13


State 7

    1 programa: inicio_programa bloque_programa .

    $default  reduce using rule 1 (programa)


State 8

    9 bloque_programa: declaraciones_tipos . declaraciones_constantes declaraciones_variables declaracion_varias_funciones bloque_instrucciones

    CONSTANTES  shift, and go to state 14

    $default  reduce using rule 44 (declaraciones_constantes)

    declaraciones_constantes  go to state 15


State 9

    6 inicio_programa: PROGRAMA IDENTIFICADOR ';' . varias_cabeceras

    $default  reduce using rule 5 (varias_cabeceras)

    varias_cabeceras  go to state 16


State 10

   11 declaracion_tipo: error . '\n'

    '\n'  shift, and go to state 17


State 11

   10 declaracion_tipo: IDENTIFICADOR . ES especificacion_tipo ';'

    ES  shift, and go to state 18


State 12

   13 varias_declaracion_tipo: declaracion_tipo .

    $default  reduce using rule 13 (varias_declaracion_tipo)


State 13

   12 varias_declaracion_tipo: varias_declaracion_tipo . declaracion_tipo
   14 declaraciones_tipos: TIPOS varias_declaracion_tipo . FIN

    error          shift, and go to state 10
    FIN            shift, and go to state 19
    IDENTIFICADOR  shift, and go to state 11

    declaracion_tipo  go to state 20


State 14

   43 declaraciones_constantes: CONSTANTES . varias_declaracion_constante FIN

    error          shift, and go to state 21
    IDENTIFICADOR  shift, and go to state 22

    declaracion_constante         go to state 23
    varias_declaracion_constante  go to state 24


State 15

    9 bloque_programa: declaraciones_tipos declaraciones_constantes . declaraciones_variables declaracion_varias_funciones bloque_instrucciones

    VARIABLES  shift, and go to state 25

    $default  reduce using rule 76 (declaraciones_variables)

    declaraciones_variables  go to state 26


State 16

    4 varias_cabeceras: varias_cabeceras . CABECERA varias_rutas ';'
    6 inicio_programa: PROGRAMA IDENTIFICADOR ';' varias_cabeceras .

    CABECERA  shift, and go to state 27

    $default  reduce using rule 6 (inicio_programa)


State 17

   11 declaracion_tipo: error '\n' .

    $default  reduce using rule 11 (declaracion_tipo)


State 18

   10 declaracion_tipo: IDENTIFICADOR ES . especificacion_tipo ';'

    $default  reduce using rule 17 (varias_referencias)

    varias_referencias   go to state 28
    especificacion_tipo  go to state 29


State 19

   14 declaraciones_tipos: TIPOS varias_declaracion_tipo FIN .

    $default  reduce using rule 14 (declaraciones_tipos)


State 20

   12 varias_declaracion_tipo: varias_declaracion_tipo declaracion_tipo .

    $default  reduce using rule 12 (varias_declaracion_tipo)


State 21

   40 declaracion_constante: error . '\n'

    '\n'  shift, and go to state 30


State 22

   39 declaracion_constante: IDENTIFICADOR . ES tipo_basico '=' constante ';'

    ES  shift, and go to state 31


State 23

   42 varias_declaracion_constante: declaracion_constante .

    $default  reduce using rule 42 (varias_declaracion_constante)


State 24

   41 varias_declaracion_constante: varias_declaracion_constante . declaracion_constante
   43 declaraciones_constantes: CONSTANTES varias_declaracion_constante . FIN

    error          shift, and go to state 21
    FIN            shift, and go to state 32
    IDENTIFICADOR  shift, and go to state 22

    declaracion_constante  go to state 33


State 25

   75 declaraciones_variables: VARIABLES . varias_declaracion_variables FIN

    error          shift, and go to state 34
    IDENTIFICADOR  shift, and go to state 35

    varios_identificadores_por_coma_mas  go to state 36
    declaracion_variables                go to state 37
    varias_declaracion_variables         go to state 38


State 26

    9 bloque_programa: declaraciones_tipos declaraciones_constantes declaraciones_variables . declaracion_varias_funciones bloque_instrucciones

    $default  reduce using rule 8 (declaracion_varias_funciones)

    declaracion_varias_funciones  go to state 39


State 27

    4 varias_cabeceras: varias_cabeceras CABECERA . varias_rutas ';'

    RUTA  shift, and go to state 40

    varias_rutas  go to state 41


State 28

   16 varias_referencias: varias_referencias . REF
   18 especificacion_tipo: varias_referencias . tipo_basico

    error          shift, and go to state 42
    ARRAY          shift, and go to state 43
    CADENA         shift, and go to state 44
    CARACTER       shift, and go to state 45
    CONJUNTO       shift, and go to state 46
    ENTERO         shift, and go to state 47
    ESTRUCTURA     shift, and go to state 48
    EXCEPCION      shift, and go to state 49
    FICHERO        shift, and go to state 50
    HASH           shift, and go to state 51
    IDENTIFICADOR  shift, and go to state 52
    REAL           shift, and go to state 53
    REF            shift, and go to state 54
    UNION          shift, and go to state 55

    tipo_basico        go to state 56
    tipo_escalar       go to state 57
    tipo_enumerado     go to state 58
    tipo_estructurado  go to state 59


State 29

   10 declaracion_tipo: IDENTIFICADOR ES especificacion_tipo . ';'

    ';'  shift, and go to state 60


State 30

   40 declaracion_constante: error '\n' .

    $default  reduce using rule 40 (declaracion_constante)


State 31

   39 declaracion_constante: IDENTIFICADOR ES . tipo_basico '=' constante ';'

    error          shift, and go to state 42
    ARRAY          shift, and go to state 43
    CADENA         shift, and go to state 44
    CARACTER       shift, and go to state 45
    CONJUNTO       shift, and go to state 46
    ENTERO         shift, and go to state 47
    ESTRUCTURA     shift, and go to state 48
    EXCEPCION      shift, and go to state 49
    FICHERO        shift, and go to state 50
    HASH           shift, and go to state 51
    IDENTIFICADOR  shift, and go to state 52
    REAL           shift, and go to state 53
    UNION          shift, and go to state 55

    tipo_basico        go to state 61
    tipo_escalar       go to state 57
    tipo_enumerado     go to state 58
    tipo_estructurado  go to state 59


State 32

   43 declaraciones_constantes: CONSTANTES varias_declaracion_constante FIN .

    $default  reduce using rule 43 (declaraciones_constantes)


State 33

   41 varias_declaracion_constante: varias_declaracion_constante declaracion_constante .

    $default  reduce using rule 41 (varias_declaracion_constante)


State 34

   72 declaracion_variables: error . '\n'

    '\n'  shift, and go to state 62


State 35

   67 varios_identificadores_por_coma_mas: IDENTIFICADOR .

    $default  reduce using rule 67 (varios_identificadores_por_coma_mas)


State 36

   66 varios_identificadores_por_coma_mas: varios_identificadores_por_coma_mas . ',' IDENTIFICADOR
   70 declaracion_variables: varios_identificadores_por_coma_mas . ':' especificacion_tipo ';'
   71                      | varios_identificadores_por_coma_mas . ':' especificacion_tipo '=' varias_expresiones_por_coma_mas ';'

    ','  shift, and go to state 63
    ':'  shift, and go to state 64


State 37

   74 varias_declaracion_variables: declaracion_variables .

    $default  reduce using rule 74 (varias_declaracion_variables)


State 38

   73 varias_declaracion_variables: varias_declaracion_variables . declaracion_variables
   75 declaraciones_variables: VARIABLES varias_declaracion_variables . FIN

    error          shift, and go to state 34
    FIN            shift, and go to state 65
    IDENTIFICADOR  shift, and go to state 35

    varios_identificadores_por_coma_mas  go to state 36
    declaracion_variables                go to state 66


State 39

    7 declaracion_varias_funciones: declaracion_varias_funciones . declaracion_funcion
    9 bloque_programa: declaraciones_tipos declaraciones_constantes declaraciones_variables declaracion_varias_funciones . bloque_instrucciones

    FUNCION    shift, and go to state 67
    PRINCIPIO  shift, and go to state 68

    declaracion_funcion   go to state 69
    bloque_instrucciones  go to state 70


State 40

    3 varias_rutas: RUTA .

    $default  reduce using rule 3 (varias_rutas)


State 41

    2 varias_rutas: varias_rutas . ',' RUTA
    4 varias_cabeceras: varias_cabeceras CABECERA varias_rutas . ';'

    ','  shift, and go to state 71
    ';'  shift, and go to state 72


State 42

   29 tipo_escalar: error . '\n'

    '\n'  shift, and go to state 73


State 43

   30 tipo_enumerado: ARRAY . DE especificacion_tipo

    DE  shift, and go to state 74


State 44

   26 tipo_escalar: CADENA .

    $default  reduce using rule 26 (tipo_escalar)


State 45

   25 tipo_escalar: CARACTER .

    $default  reduce using rule 25 (tipo_escalar)


State 46

   32 tipo_enumerado: CONJUNTO . DE especificacion_tipo

    DE  shift, and go to state 75


State 47

   23 tipo_escalar: ENTERO .

    $default  reduce using rule 23 (tipo_escalar)


State 48

   37 tipo_estructurado: ESTRUCTURA . PRINCIPIO varias_linea_campo FIN

    PRINCIPIO  shift, and go to state 76


State 49

   28 tipo_escalar: EXCEPCION .

    $default  reduce using rule 28 (tipo_escalar)


State 50

   27 tipo_escalar: FICHERO .

    $default  reduce using rule 27 (tipo_escalar)


State 51

   31 tipo_enumerado: HASH . DE especificacion_tipo

    DE  shift, and go to state 77


State 52

   19 tipo_basico: IDENTIFICADOR .

    $default  reduce using rule 19 (tipo_basico)


State 53

   24 tipo_escalar: REAL .

    $default  reduce using rule 24 (tipo_escalar)


State 54

   16 varias_referencias: varias_referencias REF .

    $default  reduce using rule 16 (varias_referencias)


State 55

   38 tipo_estructurado: UNION . PRINCIPIO varias_linea_campo FIN

    PRINCIPIO  shift, and go to state 78


State 56

   18 especificacion_tipo: varias_referencias tipo_basico .

    $default  reduce using rule 18 (especificacion_tipo)


State 57

   20 tipo_basico: tipo_escalar .

    $default  reduce using rule 20 (tipo_basico)


State 58

   21 tipo_basico: tipo_enumerado .

    $default  reduce using rule 21 (tipo_basico)


State 59

   22 tipo_basico: tipo_estructurado .

    $default  reduce using rule 22 (tipo_basico)


State 60

   10 declaracion_tipo: IDENTIFICADOR ES especificacion_tipo ';' .

    $default  reduce using rule 10 (declaracion_tipo)


State 61

   39 declaracion_constante: IDENTIFICADOR ES tipo_basico . '=' constante ';'

    '='  shift, and go to state 79


State 62

   72 declaracion_variables: error '\n' .

    $default  reduce using rule 72 (declaracion_variables)


State 63

   66 varios_identificadores_por_coma_mas: varios_identificadores_por_coma_mas ',' . IDENTIFICADOR

    IDENTIFICADOR  shift, and go to state 80


State 64

   70 declaracion_variables: varios_identificadores_por_coma_mas ':' . especificacion_tipo ';'
   71                      | varios_identificadores_por_coma_mas ':' . especificacion_tipo '=' varias_expresiones_por_coma_mas ';'

    $default  reduce using rule 17 (varias_referencias)

    varias_referencias   go to state 28
    especificacion_tipo  go to state 81


State 65

   75 declaraciones_variables: VARIABLES varias_declaracion_variables FIN .

    $default  reduce using rule 75 (declaraciones_variables)


State 66

   73 varias_declaracion_variables: varias_declaracion_variables declaracion_variables .

    $default  reduce using rule 73 (varias_declaracion_variables)


State 67

   77 declaracion_funcion: FUNCION . IDENTIFICADOR FLECHA_DCHA tipo_salida cuerpo_funcion
   78                    | FUNCION . IDENTIFICADOR lista_parametros FLECHA_DCHA tipo_salida cuerpo_funcion

    IDENTIFICADOR  shift, and go to state 82


State 68

   93 bloque_instrucciones: PRINCIPIO . varias_instrucciones FIN

    error          shift, and go to state 83
    CONTINUAR      shift, and go to state 84
    DEVOLVER       shift, and go to state 85
    EJECUTA        shift, and go to state 86
    ESCAPE         shift, and go to state 87
    ETIQUETA       shift, and go to state 88
    HACER          shift, and go to state 89
    IDENTIFICADOR  shift, and go to state 90
    LANZA          shift, and go to state 91
    MIENTRAS       shift, and go to state 92
    PARA           shift, and go to state 93
    SALTAR         shift, and go to state 94
    SI             shift, and go to state 95
    ';'            shift, and go to state 96
    '('            shift, and go to state 97
    '^'            shift, and go to state 98
    '\\'           shift, and go to state 99
